Implement Snowflake data source